Added Interactor and interfaces

--- a/Interactors/Interactors.csproj
+++ b/Interactors/Interactors.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\UseCases\UseCases.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DTOs\" />
