--- a/InkedUpMobile.Android/Properties/AndroidManifest.xml
+++ b/InkedUpMobile.Android/Properties/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.pjsoftware.inkedupmobile">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
 	<application android:label="InkedUpMobile.Android" android:theme="@style/MainTheme"></application>
