--- a/UseCasesShared/UseCasesShared.csproj
+++ b/UseCasesShared/UseCasesShared.csproj
@@ -5,11 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Entities\Entities.csproj" />
-    <ProjectReference Include="..\UseCasesShared\UseCasesShared.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DTOs\" />
     <Folder Include="Interfaces\" />
+    <Folder Include="Interfaces\DTOs\" />
+    <Folder Include="Interfaces\Storage\" />
+    <Folder Include="DTOs\" />
   </ItemGroup>
 </Project>
