--- a/InkedUpMobile/InkedUpMobile.csproj
+++ b/InkedUpMobile/InkedUpMobile.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
   </PropertyGroup>
 
@@ -13,5 +13,9 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StorageSqlite\StorageSqlite.csproj" />
+    <ProjectReference Include="..\Interactors\Interactors.csproj" />
   </ItemGroup>
 </Project>
