deleted interactor DTOs then renamed interactor dll and classes to adapter

--- a/InkedUpMobile/InkedUpMobile.csproj
+++ b/InkedUpMobile/InkedUpMobile.csproj
@@ -16,6 +16,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StorageSqlite\StorageSqlite.csproj" />
-    <ProjectReference Include="..\Interactors\Interactors.csproj" />
+    <ProjectReference Include="..\Adapters\Adapters.csproj" />
   </ItemGroup>
 </Project>
